--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,30 +26,30 @@
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^1.8.3",
-    "expo": "~45.0.0",
-    "expo-camera": "~12.2.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "expo": "^48.0.0",
+    "expo-camera": "~13.2.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^10.1.1",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.66.13",
     "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-redux": "^7.1.24",
-    "jest": "^26.6.3",
-    "jest-expo": "^45.0.1",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.0",
     "node-fetch": "2",
     "react-test-renderer": "17",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.4"
   },
   "resolutions": {
     "@types/react": "~17.0.21"
